<resources>
    <string name="app_name">KShop</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nameerror">Enter your full name</string>
    <string name="emailerror">Enter valid Karunya email address</string>
    <string name="passworderror">Enter at least 8 character</string>
    <string name="repassworderror">Password does not match</string>
    <string name="mobileerror">Enter a valid phone number</string>
    <string name="addrerror">Enter the full address</string>
    <string name="title_activity_add_content">AddContent</string>

    <string-array name="category">
        <item>Electronics</item>
        <item>Clothes</item>
        <item>Bikes</item>
        <item>Books</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="cloth">
        <item>Select one</item>
        <item>Cotton</item>
        <item>Wool</item>
        <item>Silk</item>
        <item>Nylon</item>
        <item>Linen</item>
        <item>Chiffon</item>
        <item>Polyester</item>
    </string-array>

    <string-array name="size">
        <item>Select one</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>

    <string name="line1">Here are a quick easy steps to follow to know the application</string>
    <string name="line2">Sign in to your account using your Karunya mail Id</string>
    <string name="line3">Search for Products that you might want to buy</string>
    <string name="line4">Or</string>
    <string name="line5">Post the products that you want to sell</string>
    <string name="line6">You can even donate products for free- Just go to the Donate option</string>
    <string name="line7">If you like a Product then through text or call make known to the poster who postered the post.</string>
    <string name="line8">You can either delete your Product later or click sold to remove it from the database.</string>
    <string name="title_activity_view_requests">ViewRequestsActivity</string>
    <string name="title_activity_my_request">MyRequestActivity</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_home2">Home2Activity</string>

</resources>

